# Adams-Very-Cool-Viewer-AVCV

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
AVCV_Set_Up_Example/: CME_detections.csv  Comparison.py
AVCV_Setup_Example/: AVCV.py  CME_tracks.csv
scripts/: AVCV.py
src/avcv/: cli.py
