[project]
name = "avcv"
version = "0.1.0"
description = "Adams Very Cool Viewer (AVCV) – CLI wrapper and utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1"
]

[project.scripts]
avcv = "avcv.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["avcv"]
